--- a/optimize_code_generation_with_llms.ipynb
+++ b/optimize_code_generation_with_llms.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "- **Class Definition**: The `CodeChatBot` class is the core of our code-generative AI model. It handles the setup, optimization, and interaction with the LLM.\n",
     "\n",
-    "- **Initialization**: When you create an instance of this class, you can specify the model's path, the device to run on (defaulting to Intel's XPU device, if available), and the data type. There's also an option to optimize the model for Intel GPUs using Intel Extension For PyTorch (IPEX).\n",
+    "- **Initialization**: When you create an instance of this class, you can specify the model's path, the device to run on (defaulting to Intel's XPU device, if available), and the data type. There's also an option to optimize the model for Intel GPUs using Intel Extension for PyTorch* (IPEX).\n",
     "\n",
     "- **Input Preparation**: The `prepare_input` method ensures that the input doesn't exceed the maximum length and combines the previous text with the user input, if required.\n",
     "\n",
@@ -168,7 +168,7 @@
     "        Parameters:\n",
     "        - model_id_or_path: The identifier or path of the pretrained model.\n",
     "        - torch_dtype: The data type to use in the model. Default is torch.bfloat16.\n",
-    "        - optimize: If True, ipex is used to optimized the model\n",
+    "        - optimize: If True, ipex is used to optimize the model\n",
     "        \"\"\"\n",
     "        self.torch_dtype = torch_dtype\n",
     "        self.device = select_device(\"xpu\")\n",
@@ -181,7 +181,6 @@
     "            if isinstance(self.device, str)\n",
     "            else self.device.type == \"xpu\"\n",
     "        ):\n",
-    "\n",
     "            self.autocast = torch.xpu.amp.autocast\n",
     "        else:\n",
     "            self.autocast = torch.cpu.amp.autocast\n",
@@ -234,7 +233,7 @@
     "        \"\"\"Prepare the input for the model, ensuring it doesn't exceed the maximum length.\"\"\"\n",
     "        response_buffer = 100\n",
     "        user_input = (\n",
-    "             \"Below is an instruction that describes a task. \"\n",
+    "            \"Below is an instruction that describes a task. \"\n",
     "            \"Write a response that appropriately completes the request.\\n\\n\"\n",
     "            f\"### Instruction:\\n{user_input}\\n\\n### Response:\")\n",
     "        combined_text = previous_text + \"\\nUser: \" + user_input + \"\\nBot: \"\n",
