--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -230,7 +230,7 @@
     "        Parameters:\n",
     "        - model_id_or_path: The identifier or path of the pretrained model.\n",
     "        - torch_dtype: The data type to use in the model. Default is torch.bfloat16.\n",
-    "        - optimize: If True, ipex is used to optimized the model\n",
+    "        - optimize: If True, ipex is used to optimize the model\n",
     "        \"\"\"\n",
     "        self.torch_dtype = torch_dtype\n",
     "        self.device = select_device(\"xpu\")\n",
@@ -319,7 +319,7 @@
     "        \"\"\"Prepare the input for the model, ensuring it doesn't exceed the maximum length.\"\"\"\n",
     "        response_buffer = 100\n",
     "        user_input = (\n",
-    "             \"Below is an instruction that describes a task. \"\n",
+    "            \"Below is an instruction that describes a task. \"\n",
     "            \"Write a response that appropriately completes the request.\\n\\n\"\n",
     "            f\"### Instruction:\\n{user_input}\\n\\n### Response:\")\n",
     "        combined_text = previous_text + \"\\nUser: \" + user_input + \"\\nBot: \"\n",
