Made dependencies reproducible, and fixed interact_with_llm()

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -33,47 +33,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d0baad4",
+   "metadata": {},
+   "source": [
+    "# Setup\n",
+    "1) Uncomment below cell and run to create new environment.\n",
+    "2) To select new environment/kernel in Jupyter, select \"simple_llm_env\" in top-right dropdown of this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e47145a5-c2b2-4957-8ce0-51c0fb1bf9a5",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "f5295d4e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
-    "#import sys\n",
-    "#!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
-    "#    accelerate==0.23.0 \\\n",
-    "#    validators==0.22.0 \\\n",
-    "#    transformers==4.32.1 \\\n",
-    "#    sentencepiece \\\n",
-    "#    pillow \\\n",
-    "#    ipywidgets \\\n",
-    "#    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "%%bash\n",
+    "export ENV_NAME=\"simple_llm_env\"\n",
+    "export PATH=/opt/intel/miniforge3/condabin:$PATH # Specify conda path, can assume we have this on Intel Tiber Developer Cloud . \n",
     "\n",
-    "import sys\n",
-    "import site\n",
-    "from pathlib import Path\n",
+    "conda create -n $ENV_NAME python=3.10 -y  # Some packages can be particular to python version.\n",
     "\n",
-    "!echo \"Installation in progress...\"\n",
-    "!{sys.executable} -m pip install -U transformers==4.35.2  --no-warn-script-location > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "# Dependencies\n",
+    "conda run -n $ENV_NAME pip install\\\n",
+    " ipykernel==6.29.5\\\n",
+    " ipywidgets==8.1.5\\\n",
+    " pandas==2.2.2\\\n",
+    " pytz\\\n",
+    " numpy==1.26.4\\\n",
+    " transformers==4.35.2  # Needed to upgrade from 4.32.1 to work\n",
     "\n",
-    "def get_python_version():\n",
-    "    return \"python\" + \".\".join(map(str, sys.version_info[:2]))\n",
+    "# XPU dependencies\n",
+    "conda run -n $ENV_NAME pip install\\\n",
+    " torch==2.1.0.post2\\\n",
+    " torchvision==0.16.0.post2\\\n",
+    " torchaudio==2.1.0.post2\\\n",
+    " oneccl_bind_pt==2.1.300+xpu\\\n",
+    " intel-extension-for-pytorch==2.1.30+xpu  --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/\\\n",
     "\n",
-    "def set_local_bin_path():\n",
-    "    local_bin = str(Path.home() / \".local\" / \"bin\") \n",
-    "    local_site_packages = str(\n",
-    "        Path.home() / \".local\" / \"lib\" / get_python_version() / \"site-packages\"\n",
-    "    )\n",
-    "    sys.path.append(local_bin)\n",
-    "    sys.path.insert(0, site.getusersitepackages())\n",
-    "    sys.path.insert(0, sys.path.pop(sys.path.index(local_site_packages)))\n",
-    "\n",
-    "set_local_bin_path()"
+    "# To make environment available to Jupyter Kernel. Please select in dropdown (top right dropdown)\n",
+    "conda run -n $ENV_NAME python -m ipykernel install --user --name=$ENV_NAME "
    ]
   },
   {
@@ -633,36 +633,27 @@
     "        out.clear_output()\n",
     "        with out:\n",
     "            print(\"\\nSetting up the model, please wait...\")\n",
-    "        #out.clear_output()\n",
-    "        model_choice = model_dropdown.value\n",
-    "        with_context = interaction_mode.value == interaction_modes[0]\n",
-    "        temperature = temperature_slider.value\n",
-    "        top_p = top_p_slider.value\n",
-    "        top_k = top_k_slider.value\n",
-    "        num_beams = num_beams_slider.value\n",
-    "        repetition_penalty = repetition_penalty_slider.value\n",
-    "        model_key = (model_choice, \"xpu\")\n",
-    "        if model_key not in model_cache:\n",
-    "            model_cache[model_key] = ChatBotModel(model_id_or_path=model_choice)\n",
-    "        bot = model_cache[model_key]\n",
-    "        #if model_key not in model_cache:\n",
-    "        #    bot.warmup_model(\n",
-    "        #        temperature=temperature,\n",
-    "        #        top_p=top_p,\n",
-    "        #        top_k=top_k,\n",
-    "        #        num_beams=num_beams,\n",
-    "        #        repetition_penalty=repetition_penalty,\n",
-    "        #    )\n",
-    "        \n",
-    "        with out:\n",
+    "            #out.clear_output()\n",
+    "            model_choice = model_dropdown.value\n",
+    "            with_context = interaction_mode.value == interaction_modes[0]\n",
+    "            temperature = temperature_slider.value\n",
+    "            top_p = top_p_slider.value\n",
+    "            top_k = top_k_slider.value\n",
+    "            num_beams = num_beams_slider.value\n",
+    "            repetition_penalty = repetition_penalty_slider.value\n",
+    "            model_key = (model_choice, \"xpu\")\n",
+    "            if model_key not in model_cache:\n",
+    "                print(f\"Caching Chatbot {model_key}\")\n",
+    "                model_cache[model_key] = ChatBotModel(model_id_or_path=model_choice)\n",
+    "            bot = model_cache[model_key]\n",
+    "            \n",
     "            start_button.button_style = \"success\"\n",
     "            start_button.description = \"Refresh\"\n",
     "            spinner.value = \"\"\n",
     "            print(\"Ready!\")\n",
     "            print(\"\\nNote: This is a demonstration using pretrained models which were not fine-tuned for chat.\")\n",
     "            print(\"If the bot doesn't respond, try clicking on refresh.\\n\")\n",
-    "        try:\n",
-    "            with out:\n",
+    "            try:\n",
     "                bot.interact(\n",
     "                    with_context=with_context,\n",
     "                    out=out,\n",
@@ -672,9 +663,9 @@
     "                    num_beams=num_beams,\n",
     "                    repetition_penalty=repetition_penalty,\n",
     "                )\n",
-    "        except Exception as e:\n",
-    "            with out:\n",
-    "                print(f\"An error occurred: {e}\")\n",
+    "            except Exception as e:\n",
+    "                with out:\n",
+    "                    print(f\"An error occurred: {e}\")\n",
     "\n",
     "    start_button.on_click(on_start)\n"
    ]
